[metadata]
name = analysis_server
version = 0.1
summary = OpenMDAO interface to Phoenix Integration's ModelCenter/AnalysisServer
description-file = README.txt
keywords = openmdao
home-page = 
download-url = 
author = 
author-email = 
maintainer = 
maintainer-email = 
license = 
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = openmdao.main
provides-dist = 
obsoletes-dist = 
requires-python = 
	>=2.6
	<2.7
requires-externals = 
project-url = 

[openmdao]
copyright = 

