[metadata]
name = mycomp
version = 0.1
summary = An example of a Component plugin
description-file = README.txt
keywords = openmdao
home-page = 
download-url = 
author = 
author-email = 
maintainer = 
maintainer-email = 
license = NOSA
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = openmdao.main
provides-dist = 
obsoletes-dist = 
requires-python = 
	>=2.6
	<2.7
requires-externals = 
project-url = 

[openmdao]
copyright = None


